--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
             <p>"I craft beautiful, responsive websites that bring ideas to life. With a keen eye for design and clean code, I create digital experiences that users love and businesses trust."</p>
             <div class="social-media">
                 <a href="#"><i class="fa-brands fa-instagram"></i></a>
-                <a href="#"><i class="fa-brands fa-linkedin"></i></a>
-                <a href="#"><i class="fa-brands fa-github"></i></a>
+                <a href="https://github.com/mxl1qr"><i class="fa-brands fa-linkedin"></i></a>
+                <a href="https://github.com/mxl1qr"><i class="fa-brands fa-github"></i></a>
                 <a href="#"><i class="fa-brands fa-whatsapp"></i></a>
             </div>
             <a href="#" class="btn">Download CV</a>
