--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
     <!-- MAIN-CSS -->
     <title>Personal Portofolio Website</title>
+    <link rel="icon" href="content/images/Logo_SMK_Negeri_40_Jakarta.png">
     <link rel="stylesheet" href="style3.css">
 </head>
 <body>
