--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <!-- MAIN-CSS -->
     <title>Personal Portofolio Website</title>
     <link rel="stylesheet" href="style3.css">
+    <link rel="icon" href="/content/images/favicon.png" type="image/x-icon">
 </head>
 <body>
     <!--- HEADER DESIGN -->
