--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <h3>Howdy Strangers!</h3>
             <h1>I'm Maliq Rizqi Ananda</h1>
             <h3>And I'm a <span>Front-End Developer</span></h3>
-            <p>"I craft beautiful, responsive websites that bring ideas to life. With a keen eye for design and clean code, I create digital experiences that users love and businesses trust."</p>
+            <p>"Ik maak prachtige, responsieve websites die ideeën tot leven brengen. Met een scherp oog voor design en heldere code creëer ik digitale ervaringen waar gebruikers dol op zijn en waar bedrijven op vertrouwen. "</p>
             <div class="social-media">
                 <a href="#"><i class="fa-brands fa-instagram"></i></a>
                 <a href="https://github.com/mxl1qr"><i class="fa-brands fa-linkedin"></i></a>
