Adjustments in linking social media profiles

--- a/nl-index.html
+++ b/nl-index.html
@@ -43,7 +43,7 @@
             <p>"Ik maak prachtige, responsieve websites die ideeën tot leven brengen. Met een scherp oog voor design en heldere code creëer ik digitale ervaringen waar gebruikers dol op zijn en waar bedrijven op vertrouwen. "</p>
             <div class="social-media">
                 <a href="#"><i class="fa-brands fa-instagram"></i></a>
-                <a href="https://github.com/mxl1qr"><i class="fa-brands fa-linkedin"></i></a>
+                <a href="https://linkedin.com/in/maliq-rizqi-93792a304"><i class="fa-brands fa-linkedin"></i></a>
                 <a href="https://github.com/mxl1qr"><i class="fa-brands fa-github"></i></a>
                 <a href="#"><i class="fa-brands fa-whatsapp"></i></a>
             </div>
