Add new color to the palette

--- a/nl-index.html
+++ b/nl-index.html
@@ -9,7 +9,7 @@
 
     <!-- MAIN-CSS -->
     <title>Personal Portofolio Website</title>
-    <link rel="stylesheet" href="style2.css">
+    <link rel="stylesheet" href="nl-style2.css">
     <link rel="icon" href="/content/images/favicon.png">
 </head>
 <body>
