Example from Claude & some modified

--- a/nl-index.html
+++ b/nl-index.html
@@ -11,6 +11,9 @@
     <title>Personal Portofolio Website</title>
     <link rel="stylesheet" href="nl-style2.css">
     <link rel="icon" href="/content/images/favicon.png">
+    
+    <!-- SCRIPT -->
+    <script src="script1.js" defer></script>
 </head>
 <body>
     <!--- HEADER DESIGN -->
