--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
             <a href="#home" class="active">Home</a>
             <a href="#about">About</a>
             <a href="#skills">Skills</a>
-            <a href="#experiences">Experiences  </a>
+            <a href="#projects">Projects</a>
+            <a href="#experience">Experiences  </a>
             <a href="#contact">Contact</a>
         </nav>
 
