New File and modiefied css

--- a/index.html
+++ b/index.html
@@ -215,12 +215,13 @@
 
         <div class="projects-container">
             <div class="project-card">
-                <div class="project-img">
-                    <i class="fas fa-globe"></i>
+                <div class="project-img2">
+                    <!--<i class="fas fa-globe"></i>-->
+                     <img src="content/images/Screenshot 2025-08-27 080812.png" alt="Solstice Screenshot" class="page-screenshot"></img>
                 </div>
                 <div class="project-content">
                     <h3>Personal Portfolio Website</h3>
-                    <p>A modern and responsive portfolio website built with HTML5, CSS3, and JavaScript. Features smooth animations, dark theme, and mobile-first design approach.</p>
+                    <p>A modern and responsive portfolio website built with HTML5, CSS3, and JavaScript. Features smooth animations, blue theme, and responsive design.</p>
                     <div class="tech-stack">
                         <span class="tech-tag">HTML5</span>
                         <span class="tech-tag">CSS3</span>
@@ -235,26 +236,27 @@
             </div>
 
             <div class="project-card">
-                <div class="project-img">
-                    <i class="fas fa-shopping-cart"></i>
+                <div class="project-img2">
+                    <!--<i class="fas fa-shopping-cart"></i>-->
+                    <img src="content/images/Solstice Page/Short Product List Page - Urban Jogger.png" alt="Solstice Screenshot" class="project-screenshot"></img>
+                    <img src="content/images/Solstice Page/Short X - 11.png" alt="Solstice Screenshot" class="project-screenshot"></img>
+                    <img src="content/images/Solstice Page/Product Detail Page - Everyday Oxford-Regular.png" alt="Solstice Screenshot" class="project-screenshot"></img>
+                    <img src="content/images/Solstice Page/Cart Page.png" alt="Solstice Screenshot" class="project-screenshot"></img>
                 </div>
                 <div class="project-content">
-                    <h3>E-Commerce Landing Page</h3>
-                    <p>A beautiful and modern e-commerce landing page with product showcase, testimonials, and contact form. Optimized for conversion and user experience.</p>
+                    <h3>E-Commerce App Prototype</h3>
+                    <p>A prototype of an e-commerce app named SOLSTICE built with product showcase, testimonials, and ratings. Minimalize Design & Fresh Look.</p>
                     <div class="tech-stack">
-                        <span class="tech-tag">HTML5</span>
-                        <span class="tech-tag">CSS3</span>
-                        <span class="tech-tag">JavaScript</span>
-                        <span class="tech-tag">Bootstrap</span>
+                        <span class="tech-tag">Figma</span>
                     </div>
                     <div class="project-links">
-                        <a href="#" class="project-btn btn-demo">Live Demo</a>
-                        <a href="https://github.com/mxl1qr" class="project-btn btn-code">View Code</a>
+                        <a href="https://www.figma.com/proto/TD1flSCMyBLS52QxgFn0W5/Solstice?node-id=62-12&t=hHNrb88S6IwEb8N3-1" class="project-btn btn-demo">Live Demo</a>
+                        <a href="mailto:maliq.rizqi@outlook.co.id?subject=Request%20Template&body=Hi%2C%0A%0ASaya%20butuh%20template%20untuk%20project%20yang%20sedang%20dikerjakan.%20Bisa%20share%20templatenya%3F%0A%0AThanks!" class="project-btn btn-code">Request Template</a>
                     </div>
                 </div>
             </div>
 
-            <div class="project-card">
+            <!--<div class="project-card">
                 <div class="project-img">
                     <i class="fas fa-calculator"></i>
                 </div>
@@ -290,7 +292,7 @@
                         <a href="https://github.com/mxl1qr" class="project-btn btn-code">View Code</a>
                     </div>
                 </div>
-            </div>
+            </div>-->
         </div>
     </section>
 
@@ -308,7 +310,7 @@
                     <div class="timeline-title">Software Engineering</div>
                     <div class="timeline-subtitle">SMK Negeri 40 Jakarta</div>
                     <div class="timeline-description">
-                        Currently studying Software Engineering with focus on web development, mobile applications, and database management. Learning programming languages including C#, Python, HTML, CSS, and JavaScript.
+                        Currently studying Software Engineering with focus on web development and database management. Learning programming languages including C#, HTML, CSS, and JavaScript.
                     </div>
                 </div>
 
@@ -324,9 +326,9 @@
                 <div class="certifications">
                     <h4>Certifications & Courses</h4>
                     <ul class="cert-list">
-                        <li>Web Development Fundamentals - Online Course (2024)</li>
-                        <li>Introduction to Cybersecurity - Cisco Networking Academy (2024)</li>
-                        <li>HTML & CSS Certification - FreeCodeCamp (2023)</li>
+                        <li>Role Of SOC : The World Is Under Attack! Are We Ready? - Jadi Hacker (2025)</li>
+                        <li>Born To Defend - Jadi Hacker (2025)</li>
+                        <li>Virtual Bootcamp Batch 1 Digital Business and Cyber Security - UNSIA x UNAS (2024)</li>
                         <li>JavaScript Basics - SoloLearn (2023)</li>
                     </ul>
                 </div>
@@ -440,7 +442,7 @@
     <footer class="footer">
         <div class="footer-content">
             <div class="footer-text">
-                <p>&copy; 2024 Maliq Rizqi Ananda. All rights reserved.</p>
+                <p>&copy; 2025 Maliq Rizqi Ananda. All rights reserved.</p>
             </div>
             <div class="footer-social">
                 <a href="#"><i class="fa-brands fa-instagram"></i></a>
