--- a/index.html
+++ b/index.html
@@ -328,8 +328,9 @@
                     <ul class="cert-list">
                         <li>Role Of SOC : The World Is Under Attack! Are We Ready? - Jadi Hacker (2025)</li>
                         <li>Born To Defend - Jadi Hacker (2025)</li>
+                        <li>Samsung Innovation Campus Batch 6 Logic Test - Hacktiv8 (2024)</li>
                         <li>Virtual Bootcamp Batch 1 Digital Business and Cyber Security - UNSIA x UNAS (2024)</li>
-                        <li>JavaScript Basics - SoloLearn (2023)</li>
+                        <!--<li>JavaScript Basics - SoloLearn (2023)</li>-->
                     </ul>
                 </div>
             </div>
@@ -404,7 +405,7 @@
                     <i class="fab fa-linkedin"></i>
                     <div>
                         <h4>LinkedIn</h4>
-                        <p>linkedin.com/in/maliq-rizqi-93792a304</p>
+                        <p><a href="https://linkedin.com/in/maliq-rizqi-93792a304">linkedin.com/in/maliq-rizqi-93792a304</p></a>
                     </div>
                 </div>
             </div>
