--- a/index.html
+++ b/index.html
@@ -229,8 +229,8 @@
                         <span class="tech-tag">Responsive Design</span>
                     </div>
                     <div class="project-links">
-                        <a href="https://mxl1qr.github.io/portofolio-website/" class="project-btn btn-demo">Live Demo</a>
-                        <a href="https://github.com/mxl1qr/portofolio-website" class="project-btn btn-code">View Code</a>
+                        <a href="https://mxl1qr.github.io/portofolio-website/" class="project-btn btn-demo" target="_blank">Live Demo</a>
+                        <a href="https://github.com/mxl1qr/portofolio-website" class="project-btn btn-code" target="_blank">View Code</a>
                     </div>
                 </div>
             </div>
@@ -250,8 +250,8 @@
                         <span class="tech-tag">Figma</span>
                     </div>
                     <div class="project-links">
-                        <a href="https://www.figma.com/proto/TD1flSCMyBLS52QxgFn0W5/Solstice?node-id=62-12&t=hHNrb88S6IwEb8N3-1" class="project-btn btn-demo">Live Demo</a>
-                        <a href="mailto:maliq.rizqi@outlook.co.id?subject=Request%20Template&body=Hi%2C%0A%0ASaya%20butuh%20template%20untuk%20project%20yang%20sedang%20dikerjakan.%20Bisa%20share%20templatenya%3F%0A%0AThanks!" class="project-btn btn-code">Request Template</a>
+                        <a href="https://www.figma.com/proto/TD1flSCMyBLS52QxgFn0W5/Solstice?node-id=62-12&t=hHNrb88S6IwEb8N3-1" class="project-btn btn-demo" target="_blank">Live Demo</a>
+                        <a href="mailto:maliq.rizqi@outlook.co.id?subject=Request%20Template&body=Hi%2C%0A%0ASaya%20butuh%20template%20untuk%20project%20yang%20sedang%20dikerjakan.%20Bisa%20share%20templatenya%3F%0A%0AThanks!" class="project-btn btn-code" target="_blank">Request Template</a>
                     </div>
                 </div>
             </div>
@@ -357,11 +357,11 @@
                 </div>
 
                 <div class="timeline-item">
-                    <div class="timeline-date">2023 - 2024</div>
+                    <div class="timeline-date">Feb 2024 - Apr 2024</div>
                     <div class="timeline-title">Student Projects</div>
                     <div class="timeline-subtitle">SMK Negeri 40 Jakarta</div>
                     <div class="timeline-description">
-                        Participated in various school projects including building a library management system, creating responsive web designs, and developing simple desktop applications using C#.
+                        Participated in school projects including creating a responsive e-Commerce prototype using Figma.
                     </div>
                 </div>
             </div>
