--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@
             <h3>And I'm a <span class="multiple-text"></span></h3>
             <p>"I craft beautiful, responsive websites that bring ideas to life. With a keen eye for design and clean code, I create digital experiences that users love and businesses trust."</p>
             <div class="social-media">
-                <a href="#"><i class="fa-brands fa-instagram"></i></a>
-                <a href="https://linkedin.com/in/maliq-rizqi-93792a304"><i class="fa-brands fa-linkedin"></i></a>
-                <a href="https://github.com/mxl1qr"><i class="fa-brands fa-github"></i></a>
-                <a href="#"><i class="fa-brands fa-whatsapp"></i></a>
+                <a href="#" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+                <a href="https://linkedin.com/in/maliq-rizqi-93792a304" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
+                <a href="https://github.com/mxl1qr" target="_blank"><i class="fa-brands fa-github"></i></a>
+                <a href="#" target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
             </div>
             <a href="#" class="btn">Download CV</a>
         </div>
@@ -338,7 +338,7 @@
             <div class="work-experience">
                 <h3>Experience</h3>
                 
-                <div class="timeline-item">
+                <!--<div class="timeline-item">
                     <div class="timeline-date">2024 - Present</div>
                     <div class="timeline-title">Freelance Web Developer</div>
                     <div class="timeline-subtitle">Self-Employed</div>
@@ -354,7 +354,7 @@
                     <div class="timeline-description">
                         Completed a 3-month internship focusing on frontend development. Assisted in building user interfaces, fixing bugs, and implementing responsive design features.
                     </div>
-                </div>
+                </div>-->
 
                 <div class="timeline-item">
                     <div class="timeline-date">Feb 2024 - Apr 2024</div>
@@ -446,10 +446,10 @@
                 <p>&copy; 2025 Maliq Rizqi Ananda. All rights reserved.</p>
             </div>
             <div class="footer-social">
-                <a href="#"><i class="fa-brands fa-instagram"></i></a>
-                <a href="https://linkedin.com/in/maliq-rizqi-93792a304"><i class="fa-brands fa-linkedin"></i></a>
-                <a href="https://github.com/mxl1qr"><i class="fa-brands fa-github"></i></a>
-                <a href="#"><i class="fa-brands fa-whatsapp"></i></a>
+                <a href="#" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+                <a href="https://linkedin.com/in/maliq-rizqi-93792a304" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
+                <a href="https://github.com/mxl1qr" target="_blank"><i class="fa-brands fa-github"></i></a>
+                <a href="#" target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
             </div>
         </div>
     </footer>
