edited contact section

--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
                 <h3>Education</h3>
                 
                 <div class="timeline-item">
-                    <div class="timeline-date">2023 - Present</div>
+                    <div class="timeline-date">2024 - Present</div>
                     <div class="timeline-title">Software Engineering</div>
                     <div class="timeline-subtitle">SMK Negeri 40 Jakarta</div>
                     <div class="timeline-description">
@@ -315,9 +315,9 @@
                 </div>
 
                 <div class="timeline-item">
-                    <div class="timeline-date">2020 - 2023</div>
+                    <div class="timeline-date">2021 - 2024</div>
                     <div class="timeline-title">Junior High School</div>
-                    <div class="timeline-subtitle">SMP Negeri Jakarta</div>
+                    <div class="timeline-subtitle">SMP Muhammadiyah 31 Jakarta</div>
                     <div class="timeline-description">
                         Completed junior high school education with excellent grades. Developed interest in technology and computer science during this period.
                     </div>
@@ -389,7 +389,7 @@
                     <i class="fas fa-envelope"></i>
                     <div>
                         <h4>Email</h4>
-                        <p>maliq.rizqi@example.com</p>
+                        <p>am.rizqi51@gmail.com</p>
                     </div>
                 </div>
 
@@ -397,7 +397,7 @@
                     <i class="fas fa-phone"></i>
                     <div>
                         <h4>Phone</h4>
-                        <p>+62 xxx-xxxx-xxxx</p>
+                        <p>+62 858-9013-0117</p>
                     </div>
                 </div>
 
