--- a/id-index.html
+++ b/id-index.html
@@ -48,7 +48,7 @@
             <h3>Dan saya adalah seorang <span class="multiple-text"></span></h3>
             <p>"Saya bikin website yang cantik dan responsif, yang bisa menghidupkan ide-ide kreatif. Dengan mata yang jeli untuk desain dan kode yang rapi, saya ciptakan pengalaman digital yang disukai pengguna dan dipercaya bisnis."</p>
             <div class="social-media">
-                <a href="#" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+                <a href="https://www.instagram.com/maliq.rizqi" target="_blank"><i class="fa-brands fa-instagram"></i></a>
                 <a href="https://linkedin.com/in/maliq-rizqi-93792a304" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
                 <a href="https://github.com/mxl1qr" target="_blank"><i class="fa-brands fa-github"></i></a>
                 <a href="#" target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
