--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="icon" href="/content/images/favicon.png">
 
     <!--- MAIN-JS -->
-    <script src="script1.js" defer></script>
+    <script src="script.js" defer></script>
 
     <!-- TYPED JS -->
     <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
